fix word break on table

--- a/static/assets/style.css
+++ b/static/assets/style.css
@@ -40,6 +40,7 @@ td {
 
 td:first-child {
   width: 70%;
+  word-break: break-all;
 }
 
 th {
